# qbitel-bridge

./: .bandit  .bandit.yaml  .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CRONOS_AI_FINAL_PRODUCT_OVERVIEW.md  CRONOS_AI_LLM_FEATURES_INTEGRATION_PLAN.md  CRONOS_AI_PRIORITY_MATRIX.md  DASHBOARD_IMPLEMENTATION_COMPLETE.md  DEPLOYMENT.md  DEVELOPMENT.md  ENTERPRISE_SECURITY_IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_GAPS_ANALYSIS.md  IMPLEMENTATION_PLAN_ROADMAP.md  INVESTOR_DOCUMENTS_README.md  INVESTOR_PITCH_DECK.md  LICENSE  Makefile  NOTICE  PQC_IMPLEMENTATION_PLAN.md  PRODUCT_WALKTHROUGH.md  PROTOCOL_COPILOT_IMPLEMENTATION_COMPLETE.md  QBITEL_AI_Product_Summary_Professional.html  QBITEL_COMPLETE_PRODUCT_MARKETING_REFERENCE.md  QBITEL_COMPLETE_TECHNICAL_REFERENCE.md  QUICKSTART.md  README.md  RELEASING.md  SECURITY.md  architecture.md  build_reference.py  build_reference.sh  (+25 more)
.claude/: settings.local.json
.github/: dependabot.yml  pull_request_template.md
ai_engine/: .coveragerc  .secrets.enc  README.md  UNIT_TEST_IMPLEMENTATION_SUMMARY.md  __init__.py  __main__.py  alembic.ini  coverage.json  pytest.ini  requirements.txt
audio-walkthrough/: qbitel_bridge_quantum-proofs_legacy_infrastructure.m4a  quantum-proofing_5g_with_network_overlays.m4a  quantum-proofing_ancient_insurance_mainframes.m4a
config/: compliance.yaml  cronos_ai.production.yaml  cronos_ai.yaml  qbitel.production.yaml  qbitel.yaml
datasets/: README.md  dataset_loader.py
diagrams/: README.md
docs/: ADVANCED_GRAMMAR_LEARNING.md  ADVANCED_GRAMMAR_LEARNING_COMPLETE.md  AI_AGENT_IMPLEMENTATION_GUIDE.md  AI_ML_PROTOCOL_DISCOVERY_PRODUCTION_COMPLETE.md  AI_ML_PROTOCOL_DISCOVERY_PRODUCTION_READINESS.md  API.md  ARCHITECTURE_DIAGRAMS.md  AUTONOMOUS_COMPLIANCE_REPORTER.md  AUTONOMOUS_COMPLIANCE_REPORTER_PRODUCTION_READY.md  BANKING_DOMAIN_WALKTHROUGH.md  CLOUD_MIGRATION_USE_CASES.md  DATABASE_MIGRATIONS.md  DEPENDENCY_MANAGEMENT.md  DEPLOYMENT.md  ENHANCED_PCFG_INFERENCE.md  ENTERPRISE_AUTHENTICATION.md  ENVIRONMENT_VARIABLE_CONFIGURATION.md  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_PLAN_AIML.md  IMPLEMENTATION_PLAN_CLOUDNATIVE.md  IMPLEMENTATION_PLAN_SECURITY.md  KNOWLEDGE_BASE.md  LEGACY_SYSTEM_WHISPERER.md  LOCAL_DEPLOYMENT_GUIDE.md  ML_PIPELINE_IMPROVEMENTS_SUMMARY.md  ML_PIPELINE_OPERATIONS.md  OPERATIONAL_PROCEDURES.md  PROBLEM_STATEMENT.md  PRODUCTION_DEPLOYMENT_CHECKLIST.md  PRODUCTION_MODE_DETECTION.md  PRODUCTION_PROTOCOL_DISCOVERY.md  PRODUCTION_READINESS_ASSESSMENT.md  PRODUCTION_READINESS_GAPS_IMPLEMENTATION.md  PRODUCTION_READINESS_IMPLEMENTATION.md  PRODUCTION_READINESS_IMPLEMENTATION_COMPLETE.md  PROTOCOL_COPILOT_API.md  PROTOCOL_COPILOT_IMPLEMENTATION_COMPLETE.md  PROTOCOL_TRANSLATION_STUDIO.md  README.md  (+9 more)
examples/: legacy_whisperer_example.py
investor_documents_docx/: IMPLEMENTATION_PLAN_ROADMAP.docx  INVESTOR_PITCH_DECK.docx  PRODUCT_WALKTHROUGH.docx
notebooklm/: 01_TECHNICAL_DEEP_DIVE.md  02_PRODUCT_AND_MARKETING.md  03_DOMAIN_USE_CASES.md  04_PRODUCT_OWNER_STEP_BY_STEP_GUIDE.md
rust/dataplane/: Cargo.toml
rust/dataplane/crates/adapter_sdk/: Cargo.toml
rust/dataplane/crates/adapter_sdk/src/: lib.rs
rust/dataplane/crates/adapters/hl7_mllp/: Cargo.toml
rust/dataplane/crates/adapters/hl7_mllp/src/: lib.rs
rust/dataplane/crates/adapters/iso8583/: Cargo.toml
rust/dataplane/crates/adapters/iso8583/src/: lib.rs  parser.rs  routing.rs  security.rs
rust/dataplane/crates/adapters/modbus/: Cargo.toml
rust/dataplane/crates/adapters/modbus/src/: lib.rs  protocol.rs  security.rs
rust/dataplane/crates/adapters/tn3270e/: Cargo.toml
rust/dataplane/crates/adapters/tn3270e/src/: datastream.rs  lib.rs  protocol.rs
rust/dataplane/crates/ai_bridge/: Cargo.toml
rust/dataplane/crates/ai_bridge/src/: lib.rs
rust/dataplane/crates/dpdk_engine/: Cargo.toml  build.rs  wrapper.h
rust/dataplane/crates/dpdk_engine/src/: analytics.rs  config.rs  flow.rs  lib.rs  memory.rs  offload.rs  packet.rs
rust/dataplane/crates/dpi_engine/: Cargo.toml
rust/dataplane/crates/dpi_engine/src/: classifier.rs  config.rs  features.rs  lib.rs  ml_engine.rs  patterns.rs  protocols.rs  security.rs
rust/dataplane/crates/io_engine/: Cargo.toml
rust/dataplane/crates/io_engine/src/: ha.rs  high_frequency_metrics.rs  lib.rs  metrics.rs  performance.rs  tracing.rs
rust/dataplane/crates/io_engine/src/ha/: cluster.rs
rust/dataplane/crates/k8s_operator/: Cargo.toml
rust/dataplane/crates/k8s_operator/src/: config.rs  crd.rs  error.rs  lib.rs  metrics.rs
rust/dataplane/crates/k8s_operator/src/controller/: aiengine.rs  controlplane.rs  dataplane.rs  mod.rs  policy.rs  servicemesh.rs
rust/dataplane/crates/pqc_tls/: Cargo.toml  README.md
rust/dataplane/crates/pqc_tls/examples/: production_config.yaml  production_example.rs
rust/dataplane/crates/pqc_tls/src/: benchmarks.rs  certs.rs  client.rs  config.rs  dilithium.rs  errors.rs  falcon.rs  hsm.rs  hybrid.rs  kyber.rs  lib.rs  lifecycle.rs  mlkem.rs  performance.rs  provider.rs  rotation.rs  server.rs  tests.rs  validation.rs
scripts/: backup_database.py  check_credentials.py  check_dependencies.py  check_production_readiness.py  deploy-macos.sh  deploy.ps1  deploy.sh  export_openapi.py  rotate_secrets.py  safe_migration.py  seed_marketplace.py  setup_s3_bucket.py  setup_stripe_webhook.py  start-local.sh  upload_sbom_to_dependency_track.sh  verify_marketplace_deployment.py  verify_sbom_signature.sh
sdk_generator/: __init__.py  generator.py
tests/integration/: Cargo.toml  conftest.py  production-integration-tests.py  run_integration_tests.sh  run_uc1_tests.sh  test_compliance_integration.py  test_database_integration.py  test_legacy_whisperer_e2e.py  test_llm_integration.py  test_production_features.py  test_uc1_e2e_flow.py  test_zero_touch_security_e2e.py
tests/integration/src/: lib.rs  runner.rs
tests/integration/src/e2e/: mod.rs
tests/integration/src/performance/: mod.rs
website/: package.json  (+4 more)
(+10160 files in other folders)
