[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qbitel-bridge"
version = "1.0.0"
description = "QBITEL Bridge - Quantum-Safe Legacy Modernization Platform"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
keywords = [
    "post-quantum-cryptography",
    "legacy-modernization",
    "protocol-discovery",
    "cobol",
    "mainframe",
    "quantum-safe",
    "ai",
    "machine-learning"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    # Core Framework
    "fastapi>=0.109.0,<1.0",
    "uvicorn[standard]>=0.27.0,<1.0",
    "pydantic>=2.5.0,<3.0",
    "pydantic-settings>=2.0.0,<3.0",

    # Database & Caching
    "sqlalchemy>=2.0.0,<3.0",
    "alembic>=1.13.0,<2.0",
    "asyncpg>=0.29.0,<1.0",
    "redis>=5.0.0,<6.0",
    "etcd3>=0.12.0,<1.0",

    # Security & Authentication
    "cryptography>=41.0.0,<43.0",
    "pyjwt>=2.8.0,<3.0",
    "passlib[bcrypt]>=1.7.4,<2.0",
    "python-jose[cryptography]>=3.3.0,<4.0",
    "python-multipart>=0.0.6,<1.0",

    # Post-Quantum Cryptography
    "kyber-py>=1.0.0,<2.0",
    "dilithium-py>=1.3.0,<2.0",
    "pycryptodomex>=3.20.0,<4.0",

    # Machine Learning
    "torch>=2.2.0",
    "torchcrf>=1.1.0,<2.0",
    "numpy>=1.26.0,<2.0",
    "scipy>=1.13.0,<2.0",
    "scikit-learn>=1.4.0,<2.0",

    # Network & Communication
    "httpx>=0.25.0,<1.0",
    "aiohttp>=3.9.0,<4.0",
    "websockets>=12.0,<14.0",
    "python-socketio>=5.10.0,<6.0",
    "grpcio>=1.60.0,<2.0",
    "grpcio-tools>=1.60.0,<2.0",
    "grpcio-reflection>=1.60.0,<2.0",

    # Monitoring & Observability
    "prometheus-client>=0.19.0,<1.0",
    "psutil>=6.0.0,<7.0",
    "structlog>=23.2.0,<25.0",
    "opentelemetry-api>=1.21.0,<2.0",
    "opentelemetry-sdk>=1.21.0,<2.0",
    "opentelemetry-instrumentation-fastapi>=0.42b0",

    # Data Processing
    "pandas>=2.1.0,<3.0",
    "pyyaml>=6.0.0,<7.0",
    "python-dotenv>=1.0.0,<2.0",
    "aiofiles>=23.2.0,<25.0",
    "defusedxml>=0.7.1,<1.0",

    # CLI & Utilities
    "click>=8.1.0,<9.0",
    "rich>=13.7.0,<14.0",
    "tenacity>=8.2.0,<9.0",
    "circuitbreaker>=1.4.0,<2.0",
]

[project.optional-dependencies]
ml = [
    "shap>=0.44.0,<1.0",
    "lime>=0.2.0,<1.0",
    "captum>=0.7.0,<1.0",
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "langgraph>=0.2.0",
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",
    "rank-bm25>=0.2.2",
    "tiktoken>=0.8.0",
]
llm = [
    "openai>=1.50.0",
    "anthropic>=0.40.0",
    "ollama>=0.4.0",
    "langfuse>=2.0.0",
]
gpu = [
    "torch>=2.2.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
    "black>=24.1.0",
    "isort>=5.13.0",
    "flake8>=7.0.0",
    "mypy>=1.8.0",
    "bandit>=1.7.6",
    "safety>=2.3.0",
    "pre-commit>=3.6.0",
]
prod = [
    "gunicorn>=21.2.0,<23.0",
    "sentry-sdk[fastapi]>=1.40.0,<2.0",
    "uvloop>=0.19.0; sys_platform != 'win32'",
]
all = [
    "qbitel-bridge[ml,llm,dev,prod]",
]

[project.scripts]
qbitel = "ai_engine.__main__:main"

[project.urls]
Homepage = "https://github.com/yazhsab/qbitel-bridge"
Documentation = "https://github.com/yazhsab/qbitel-bridge/tree/main/docs"
Repository = "https://github.com/yazhsab/qbitel-bridge"
Changelog = "https://github.com/yazhsab/qbitel-bridge/blob/main/CHANGELOG.md"
Issues = "https://github.com/yazhsab/qbitel-bridge/issues"

[tool.setuptools.packages.find]
include = ["ai_engine*", "integration*", "sdk_generator*"]

[tool.pytest.ini_options]
testpaths = ["ai_engine/tests"]
asyncio_mode = "auto"

[tool.black]
line-length = 127
target-version = ["py310", "py311", "py312"]

[tool.isort]
profile = "black"
line_length = 127

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_return_any = true
warn_unused_configs = true

[tool.bandit]
exclude_dirs = ["ai_engine/tests", "tests"]
skips = ["B101"]
