[package]
name = "ai_bridge"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
bytes = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
async-trait = "0.1"
pyo3 = { version = "0.20", features = ["extension-module", "auto-initialize"] }
pyo3-asyncio = { version = "0.20", features = ["tokio-runtime"] }
adapter_sdk = { path = "../adapter_sdk" }

[lib]
crate-type = ["cdylib", "rlib"]