[package]
name = "dpdk_engine"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
bytes = "1.0"
tracing = "0.1"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
libc = "0.2"
once_cell = "1.0"
crossbeam-channel = "0.5"
parking_lot = "0.12"
numa = "0.2"
hugepage-rs = "0.3"
prometheus = { version = "0.13", features = ["process"] }

[build-dependencies]
bindgen = "0.69"
pkg-config = "0.3"

[features]
default = ["dpdk-20.11"]
dpdk-20.11 = []
dpdk-21.11 = []
dpdk-22.11 = []