[package]
name = "dpi_engine"
version = "0.1.0"
edition = "2021"
authors = ["QBITEL Team"]
description = "Enterprise-grade Deep Packet Inspection engine with ML-based classification"

[dependencies]
# Core dependencies
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
futures = "0.3"
bytes = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"

# Logging and monitoring
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
prometheus = "0.13"

# Concurrency and synchronization
parking_lot = "0.12"
crossbeam = "0.8"
crossbeam-channel = "0.5"
dashmap = "5.0"
once_cell = "1.19"

# Machine Learning
candle-core = "0.3"
candle-nn = "0.3"
candle-transformers = "0.3"
tch = "0.13" # PyTorch bindings
ort = "1.16" # ONNX Runtime

# Pattern matching and regex
regex = "1.10"
aho-corasick = "1.0"
hyperscan = "0.3"

# Network protocol parsing
pcap-parser = "0.14"
etherparse = "0.14"
nom = "7.1"

# Cryptography and hashing
sha2 = "0.10"
md5 = "0.7"
blake3 = "1.5"

# Configuration and serialization
config = "0.13"
toml = "0.8"

# HTTP and web protocols
httparse = "1.8"
url = "2.4"

# Compression
flate2 = "1.0"
lz4 = "1.24"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Memory management
jemallocator = "0.5"

[features]
default = ["ml-classification", "hardware-acceleration", "enterprise-features"]
ml-classification = ["candle-core", "candle-nn", "candle-transformers", "tch", "ort"]
hardware-acceleration = ["hyperscan"]
enterprise-features = ["jemallocator"]
gpu-acceleration = ["tch/cuda"]

[dev-dependencies]
criterion = "0.5"
proptest = "1.4"
tempfile = "3.8"

[[bench]]
name = "dpi_benchmarks"
harness = false

[build-dependencies]
bindgen = "0.68"
cc = "1.0"