[package]
name = "io_engine"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
bytes = "1"
adapter_sdk = { path = "../adapter_sdk" }
thiserror = "1"
anyhow = "1"
prometheus = "0.13"
once_cell = "1"
async-trait = "0.1"
