[package]
name = "k8s_operator"
version = "0.1.0"
edition = "2021"
description = "Kubernetes operator for CRONOS AI services"

[dependencies]
# Kubernetes client and operator framework
kube = { version = "0.87", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.20", features = ["v1_28"] }
kube-runtime = "0.87"

# Async runtime
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-opentelemetry = "0.21"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Utilities
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.0", features = ["derive"] }

# Prometheus metrics
prometheus = { version = "0.13", features = ["process"] }

# Custom resource schema generation
schemars = { version = "0.8", features = ["chrono", "uuid"] }

# Configuration
config = "0.13"

# Networking
reqwest = { version = "0.11", features = ["json"] }

# Template engine
handlebars = "4.0"