[package]
name = "pqc_tls"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "time"] }
thiserror = "1"
tracing = "0.1"
bytes = "1"
openssl = { version = "0.10", features = ["vendored", "v111"] }
tokio-openssl = "0.6"
once_cell = "1"

# PQC Cryptography
pqcrypto-kyber = "0.8"
pqcrypto-dilithium = "0.5"
oqs = "0.9"

# Hardware Acceleration & SIMD
rayon = "1.8"
wide = "0.7"
target-lexicon = "0.12"

# HSM Integration
pkcs11 = "0.8"
pkcs11-uri = "0.1"

# Key Management & Storage
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zeroize = { version = "1", features = ["zeroize_derive"] }
secrecy = "0.8"

# Performance & Monitoring
metrics = "0.22"
histogram = "0.6"

# Configuration
config = "0.14"
clap = { version = "4", features = ["derive"] }

# Async & Networking
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
tokio-util = { version = "0.7", features = ["codec"] }

# Testing & Benchmarking
criterion = { version = "0.5", optional = true }
proptest = { version = "1", optional = true }

[dev-dependencies]
tempfile = "3"
criterion = "0.5"
proptest = "1"
tokio-test = "0.4"

[features]
default = ["hardware-acceleration", "hsm", "benchmarks"]
hardware-acceleration = ["wide", "rayon"]
hsm = ["pkcs11", "pkcs11-uri"]
benchmarks = ["criterion", "proptest"]
fips = []

[[bench]]
name = "kyber_benchmark"
harness = false
required-features = ["benchmarks"]

[[bench]]
name = "dilithium_benchmark"
harness = false
required-features = ["benchmarks"]
